...
            "value": "Schließen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cerrar"
...
            "value": "Bibliothek"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Library"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Biblioteca"
...
            "value": "Einstellungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Ajustes"
...
